css/menikah.css
/* ... */
.foto4 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-lamaran.jpg");
  background-size: cover;
  background-position: top;
  background-repeat:no-repeat;
  min-height: 24rem;
}

.foto5 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-red-car.jpg");
  background-size: cover;
  background-position: center;
  background-repeat:no-repeat;
  min-height: 24rem;
}


.foto6 {
  background-image: linear-gradient(rgba(95, 2, 2, 0.5), rgba(48, 47, 47, 0.9)), url("../image/sherly-daeng-engagement-ami.jpg");
  background-size: cover;
  background-position: center;
  background-repeat:no-repeat;
  min-height: 24rem;
}



.title-foto {
  font-size: 18pt;
  font-family: 'Lato', sans-serif;
  font-weight: 700;
  text-align: left;
  color: white;
}


.subtitle-foto {
  font-family: 'Lato', sans-serif;
  font-weight: 700;
  font-size: 14pt;
  font-weight: 600;
  margin-top: 15px;
  text-align: left;
  color: white;
}

.section-light {
  background-image: url(../image/divider-flowers-leaves.png);
  background-position: bottom -30px center;
  background-repeat: no-repeat;
  background-size: initial;
}

.instagram {
  color: #996E6D;
  font-size: 1.25rem;
  font-weight: 900;
  margin-top: 0.5rem;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  padding: 10px;
}


/* for stopping the Cursive text to wrap */

.no-wrap {
  white-space: nowrap; /* Prevent text from wrapping */
  overflow: hidden; /* Hide the overflowed part */
  text-overflow: ellipsis; /* Add an ellipsis if the text overflows */
  max-width: 100%; /* Ensure the text doesn't go outside the container */
}

@media screen and (max-width: 768px) {
  .title {
    font-size: 1.5rem; /* Smaller font size for mobile */
  }
}

@media screen and (max-width: 480px) {
  .title {
    font-size: 1.2rem; /* Even smaller font size for very small screens */
  }
}

